src/test/ui/pub/pub-restricted-error-fn.rs
#![feature(pub_restricted)]

pub(crate) () fn foo() {} //~ unmatched visibility
